// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KButton renders a native link with KButton styles 1`] = `
<a type="button" href="https://google.com" class="k-button medium rounded secondary">
  <!----> I'm a native link
  <!----></a>
`;

exports[`KButton renders a router link with KButton styles 1`] = `
<a href="/services" class="k-button medium rounded primary" type="button">
  <!----> I'm a router link
  <!----></a>
`;

exports[`KButton renders an icon when using icon prop 1`] = `
<button type="button" class="k-button medium rounded outline"><span class="kong-icon k-button-icon kong-icon-spinner"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Loading</title>
  <g>
    <path d="M5 10a5 5 0 1 0 5-5" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
  </g>
</svg>
</span> Click Me
  <!----></button>
`;

exports[`KButton renders an icon when using icon slot 1`] = `
<button type="button" class="k-button medium rounded outline">Pretend I am an icon Click Me
  <!----></button>
`;

exports[`KButton renders kbutton with the btn-link appearance 1`] = `
<button type="button" class="k-button medium rounded btn-link">
  <!----> btn-link
  <!----></button>
`;

exports[`KButton renders kbutton with the creation appearance 1`] = `
<button type="button" class="k-button medium rounded creation">
  <!----> creation
  <!----></button>
`;

exports[`KButton renders kbutton with the danger appearance 1`] = `
<button type="button" class="k-button medium rounded danger">
  <!----> danger
  <!----></button>
`;

exports[`KButton renders kbutton with the outline appearance 1`] = `
<button type="button" class="k-button medium rounded outline">
  <!----> outline
  <!----></button>
`;

exports[`KButton renders kbutton with the primary appearance 1`] = `
<button type="button" class="k-button medium rounded primary">
  <!----> primary
  <!----></button>
`;

exports[`KButton renders kbutton with the secondary appearance 1`] = `
<button type="button" class="k-button medium rounded secondary">
  <!----> secondary
  <!----></button>
`;

exports[`KButton sets large class when size passed 1`] = `
<button type="button" class="k-button large rounded outline">
  <!----> Large Button
  <!----></button>
`;

exports[`KButton sets medium class when size passed 1`] = `
<button type="button" class="k-button medium rounded outline">
  <!----> Medium Button
  <!----></button>
`;

exports[`KButton sets small class when size passed 1`] = `
<button type="button" class="k-button small rounded outline">
  <!----> Small Button
  <!----></button>
`;
